tests/lang/obr/types/pass/nested.obr
MODULE NestedType;
    TYPE FIRST = SECOND;
         SECOND = THIRD;
         THIRD = INTEGER;
END NestedType.
