tests/lang/obr/types/fail/array-length-bool.obr
MODULE Arrays;
    TYPE X = ARRAY TRUE OF INTEGER;
END Arrays.
